k8s/foobar.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  labels:
    app: foobar-ms
  name: foobar-ms
spec:
  replicas: 3
  selector:
    matchLabels:
      app: foobar-ms

  strategy: {}

  template:
    metadata:
      labels:
        app: foobar-ms

    spec:
      containers:
      - name: foobar-foobar
        image: foobar-foobar:v1
        resources: {}
        ports:
        - containerPort: 8081
