k8s/bar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-ms
spec:
  type: ClusterIP
  selector:
    app: bar-ms
  ports:
  - port: 80
    targetPort: 8080
