k8s/foo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  type: NodePort
  selector:
    app: foo-ms
  ports:
  - port: 80
    targetPort: 8000
