k8s/foobar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foobar-service
spec:
  type: NodePort
  selector:
    app: foobar-ms
  ports:
  - port: 80
    targetPort: 8081
